cmake_minimum_required(VERSION 3.11)

set(SOURCES vector.c)

add_library(vector_char OBJECT ${SOURCES})
add_library(vector_double OBJECT ${SOURCES})
add_library(vector_float OBJECT ${SOURCES})
add_library(vector_int OBJECT ${SOURCES})
add_library(vector_long OBJECT ${SOURCES})
add_library(vector_long_double OBJECT ${SOURCES})
add_library(vector_short OBJECT ${SOURCES})
add_library(vector_uchar OBJECT ${SOURCES})
add_library(vector_ulong OBJECT ${SOURCES})
add_library(vector_ushort OBJECT ${SOURCES})

target_compile_definitions(vector_char PRIVATE -D__MIL_TYPE=char)
target_compile_definitions(vector_double PRIVATE -D__MIL_TYPE=double)
target_compile_definitions(vector_float PRIVATE -D__MIL_TYPE=float)
target_compile_definitions(vector_int PRIVATE -D__MIL_TYPE=int)
target_compile_definitions(vector_long PRIVATE -D__MIL_TYPE=long)
target_compile_definitions(vector_long_double PRIVATE -D__MIL_TYPE=long_double)
target_compile_definitions(vector_short PRIVATE -D__MIL_TYPE=short)
target_compile_definitions(vector_uchar PRIVATE -D__MIL_TYPE=uchar)
target_compile_definitions(vector_ulong PRIVATE -D__MIL_TYPE=ulong)
target_compile_definitions(vector_ushort PRIVATE -D__MIL_TYPE=ushort)